# nlp-final-project

./: README.md
nlp-erg/: .gitignore  README.md  project_status.sh  pyproject.toml  test_system.py
nlp-erg/data/: cosine_similarities.csv  input_texts.txt
nlp-erg/data/output_texts/: custom_pipeline.txt  reconstruction_results.json  similarity_analysis.json  spacy_pipeline.txt  transformers_pipeline.txt
nlp-erg/src/: menu.py
nlp-erg/src/nlp_assignment_2025/: analysis_main.py  bonus_masked_lm.py  config.py  enhanced_analysis_main.py  main.py  utils.py
nlp-erg/src/nlp_assignment_2025/analysis/: embeddings.py  similarity.py  visualization.py
nlp-erg/src/nlp_assignment_2025/pipelines/: custom_reconstructor.py  spacy_reconstructor.py  transformers_reconstructor.py
nlp-erg/src/nlp_assignment_2025/preprocessing/: tokenizer.py
